# devops-cloudru-camp-2025

./: README.md
01-application/: .dockerignore  Dockerfile  README.md  pyproject.toml
01-application/.devcontainer/: devcontainer.json
01-application/src/: main.py
01-application/src/models/: __init__.py  host_info.py
01-application/src/routers/: __init__.py  get_info.py
02-ansible/: README.md  ansible.cfg  inventory.yml
02-ansible/.devcontainer/: Dockerfile  devcontainer.json
02-ansible/group_vars/: echo-node.yml
02-ansible/playbooks/: deploy_echo_server.yml
02-ansible/roles/docker/meta/: main.yml
02-ansible/roles/docker/tasks/: main.yml
02-ansible/roles/echo_server/defaults/: main.yml
02-ansible/roles/echo_server/meta/: main.yml
02-ansible/roles/echo_server/tasks/: main.yml
02-ansible/roles/nginx_load_balancer/meta/: main.yml
02-ansible/roles/nginx_load_balancer/tasks/: main.yml
02-ansible/roles/nginx_load_balancer/templates/: nginx.conf.j2
02-ansible/roles/system_prerequisites/tasks/: main.yml
03-kubernetes/: README.md  nginx-ingress.1.12.1.yaml
03-kubernetes/helm/echo-server/: Chart.yaml  values.yaml
03-kubernetes/helm/echo-server/templates/: configmap.yaml  deployment.yaml  docker-secret.yaml  ingress.yaml  service.yaml
03-kubernetes/raw/: configmap.yaml  deployment.yaml  docker-secret.yaml  ingress.yaml  service.yaml
04-unix/: README.md
