[project]
name = "echo-server"
package-mode = false
version = "0.1.0"
description = "Simple FastAPI-based echo server that returns hostname, IP address, and author name"
authors = [
    {name = "sekreta-r",email = "liza.sek.000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
